# RVizSplat

./: CMakeLists.txt  README.md  plugins_description.xml
.github/workflows/: ci.yml  humble.yml  jazzy.yml  kilted.yml  rolling.yml
demo_splat_files/: only_bonsai.ply
evaluation/: compute_psnr.py  eval.py
gsplat_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
gsplat_msgs/msg/: SplatArray.msg
gsplat_plugin_evaluation/: compute_lpips.py  compute_ssim.py  monitor_process.py
gsplat_publisher/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
gsplat_publisher/gsplat_publisher/: ply_reader.py  ply_splat_publisher.py
gsplat_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins_description.xml
gsplat_rviz_plugin/include/gsplat_rviz_plugin/: perf_monitor.hpp  splat_cloud.hpp  splat_gpu.hpp  visibility_control.hpp
gsplat_rviz_plugin/include/gsplat_rviz_plugin/displays/: gsplat_display.hpp
gsplat_rviz_plugin/include/gsplat_rviz_plugin/sorters/: cpu_sorter.hpp  cuda_splat_sorter.hpp  i_splat_sorter.hpp  sorter_factory.hpp
gsplat_rviz_plugin/include/gsplat_rviz_plugin/splat_loaders/: i_splat_source.hpp  ply_file_source.hpp  ply_loader.hpp  ros_topic_source.hpp
gsplat_rviz_plugin/include/gsplat_rviz_plugin/transparency/: wboit_compositor.hpp
gsplat_rviz_plugin/ogre_media/materials/glsl120/: splat.frag
gsplat_rviz_plugin/ogre_media/materials/scripts/: splat.material  splat.program  wboit.material  wboit.program
gsplat_rviz_plugin/src/gsplat_rviz_plugin/: perf_monitor.cpp  splat_cloud.cpp
gsplat_rviz_plugin/src/gsplat_rviz_plugin/displays/: gsplat_display.cpp
gsplat_rviz_plugin/src/gsplat_rviz_plugin/sorters/: cpu_sorter.cpp  cuda_sorter.cu  sorter_factory.cpp
gsplat_rviz_plugin/src/gsplat_rviz_plugin/splat_loaders/: ply_file_source.cpp  ply_loader.cpp  ros_topic_source.cpp
gsplat_rviz_plugin/src/gsplat_rviz_plugin/transparency/: wboit_compositor.cpp
gsplat_rviz_trials/: CMakeLists.txt  LICENSE  package.xml
gsplat_rviz_trials/include/gsplat_rviz_trials/: perf_monitor.hpp  profiler.hpp  splat_cloud.hpp  splat_gpu.hpp  visibility_control.hpp
gsplat_rviz_trials/include/gsplat_rviz_trials/displays/: gsplat_display.hpp
gsplat_rviz_trials/include/gsplat_rviz_trials/sorters/: cpu_sorter.hpp  cuda_splat_sorter.hpp  i_splat_sorter.hpp  sorter_factory.hpp
gsplat_rviz_trials/include/gsplat_rviz_trials/splat_loaders/: i_splat_source.hpp  ply_file_source.hpp  ros_topic_source.hpp
gsplat_rviz_trials/include/gsplat_rviz_trials/transparency/: wboit_compositor.hpp
gsplat_rviz_trials/include/gsplat_rviz_trials/wboit/: wboit_compositor.hpp
gsplat_rviz_trials/ogre_media/materials/glsl120/: splat.frag  splat.vert  wboit_accum.frag  wboit_resolve.frag  wboit_resolve.vert  wboit_reveal.frag
gsplat_rviz_trials/ogre_media/materials/scripts/: splat.material  splat.program  wboit.material  wboit.program
gsplat_rviz_trials/src/gsplat_rviz_trials/: cuda_sorter.cu  perf_monitor.cpp  ply_loader.cpp  profiler.cpp  splat_cloud.cpp
gsplat_rviz_trials/src/gsplat_rviz_trials/displays/: gsplat_display.cpp
icons/: .gitkeep
include/gsplat_rviz_trials/: cuda_gl_bridge.hpp  cuda_sorter.hpp  ply_loader.hpp  splat.hpp  splat_cloud.hpp
include/gsplat_rviz_trials/displays/: gsplat_display.hpp
ogre_media/materials/glsl120/: splat.frag  splat.vert
ogre_media/materials/scripts/: splat.material  splat.program
rviz_splat/: CMakeLists.txt  package.xml
splat_msgs/: CMakeLists.txt  package.xml
splat_msgs/msg/: Splat.msg  SplatArray.msg
splat_publisher/: package.xml  setup.cfg  setup.py
splat_publisher/splat_publisher/: ply_splat_publisher.py
src/gsplat_rviz_trials/: cuda_gl_bridge.cpp  cuda_sorter.cu  ply_loader.cpp  splat.cpp  splat_cloud.cpp
src/gsplat_rviz_trials/displays/: gsplat_display.cpp
(+9 files in other folders)
