<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_splat</name>
  <version>0.0.0</version>
  <description>Metapackage for RViz Gaussian Splatting visualization</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gsplat_rviz_plugin</depend>

  <export>
    <metapackage/>
  </export>
</package>
